--- a/css/catalog.css
+++ b/css/catalog.css
@@ -23,9 +23,60 @@
 }
 
 .goods-page {
-  float:right;
-  width:700px;
+  float: right;
+  width: 700px;
+  margin: 0;
+  padding: 0;
+
 }
+.goods-page-sort {
+  width: 100%;
+  height: 18px;
+  margin: 22px 0;
+  padding: 11px 0;
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  vertical-align: middle;
+  background-color: #f7f3ec;
+}
+.goods-page-sort>h2 {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  vertical-align: top;
+}
+
+.goods-page-sort>a {
+  display: inline-block;
+  vertical-align: top;
+}
+
+.page-item {
+  width: 700px;
+  margin: 0;
+  padding: 0;
+}
+
+/*----------------------*/
+.item {
+  float: left;
+  margin-left: -0.25em;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  
+}
+
+.item:nth-child(3n-3) {
+  margin-right: 0;
+}
+
+.item:nth-of-type(3n+1){
+  margin-left: 0;
+}
+/*---------------------*/
+
 .gps-select-menu{
   display:inline-block;
   vertical-align:top;
@@ -34,6 +85,10 @@
   display:inline-block;
   vertical-align:top;
   list-style:none; 
+}
+.goods-paginator {
+  width: 100%;
+
 }
 
 .goods-paginator>ul>li {
