--- a/css/top-catalog.css
+++ b/css/top-catalog.css
@@ -4,9 +4,6 @@
   height: 450px;
 }
 
-.actions {
-  display: none;
-}
 .goods>h2{
   display: block;
   height: 30px;
@@ -40,100 +37,15 @@
   color: #ffffff;
   border-radius: 2px;
 }
+/*----------------------*/
 .item {
-  
-  float:left;
-  display: inline-block;
-  
-  width: 214px;
-  height: 316px;
-  
+  float: left;
   margin-right: 20px;
-
-  
-  
-  border: 1px solid #e5e5e5;
-  
-  
-  /*display: inline-block;
-  width: 218px;
-  margin: 0 0 20px 20px;
-  padding: 0 0 20px;
-  background: #fff;
-	border: 1px solid #e5e5e5;
-	position: relative;
-  font-family: PT Sans;
-  font-weight: bold;
-  text-align: center;  */
-}
-.item a {
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  text-align: center;
-  /*background-color: green;*/
-}
-.item p {
-  display: block;
-  margin: 0;
-  padding: 0;
 }
 
-.item-about{
-  position: absolute;
-  bottom: 100px;
-  
-  display: block;
-  
-  font-family: "PT Sans", "Tahoma", sans-serif;
-  font-size: 18px;
-  line-height: 20px;
+.item:last-child {
+  margin-right: 0;
 }
-
-.item-last {
-  margin-right: 0px;  
-}
-.item-cost {
-  font-family: "PT Sans", "Tahoma", sans-serif;
-  font-size: 17px;
-  line-height: 18px;
-  font-weight: bold;
-}
-
-.item-cost-new {
-  
-  position: absolute;
-  right: 37px;
-  bottom: 20px;
-  
-  display: block;
-  width: 140px;
-  height: 38px;
-  
-  background-color: #ee3643;
-  color: #ffffff;
-  
-}
-
-.item-cost-old {
-  position: absolute;
-  bottom: 70px;
-  text-decoration: line-through;
-  color: #999999;
-}
-
-/*.new::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 60px;
-  height: 59px;
-  background: url(../img/new-flag.png) no-repeat 210px 0;
-  z-index: 1000;
-}*/
 
 /*--------------------------------*/
 .fabricator{
