--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,8 @@
 .icon-facebook::before { content: "\66"; } /* "f" */
 .icon-instagramm::before { content: "\1f4f7"; } /*  */
 .icon-home::before { content: "\1f3e0"; } /* "\1f3e0" */
+.icon-up-dir::before { content: "\25b2"; } /* "?" */
+.icon-down-dir::before { content: "\25bc"; } /* "?" */
 /*----------------------*/
 .icon-left::before { content: "\3c"; } /* "&lt;" */
 .icon-right::before { content: "\3e"; } /* "&gt;" */
@@ -99,8 +101,7 @@
 .icon-right-big::before { content: "\2192"; } /* "?" */
 
 .icon-logout::before { content: "\241b"; } /* "?" */
-.icon-up-dir::before { content: "\25b2"; } /* "?" */
-.icon-down-dir::before { content: "\25bc"; } /* "?" */
+
 .icon-circle::before { content: "\25cb"; } /* "?" */
 .icon-circle-dot::before { content: "\25cf"; } /* "?" */
 .icon-star::before { content: "\2605"; } /* "?" */
@@ -245,8 +246,11 @@ header {
   padding-right: 10px;
   padding-left: 10px;
 }
+.search-form {
+  display:inline-block;
+}
 
-.iu-search>a>input {
+.search-form input {
   width: 100px;
   display:none;
   
@@ -256,9 +260,12 @@ header {
   background-color: #ffffff;
 }
 
-.iu-search:active>a>label{
-  display: none;
+.search-form:active>label {
+  display:none;
 }
+/*.iu-search:active>a>label{
+  display: none;
+}*/
 
 .iu-search:active>.icon-search{
   color: #ee3643;
@@ -653,12 +660,13 @@ nav {
   border-radius: 2px;
 }
 /*----------------------*/
-.item {
+.goods-item {
   float: left;
+  /*display: inline-block;*/
   margin-right: 20px;
 }
 
-.item:last-child {
+.goods-item:last-child {
   margin-right: 0;
 }
 
@@ -704,8 +712,9 @@ nav {
   height: 143px;
   margin-right: 20px;
   margin-bottom: 20px;
- /* text-align: center;
-  vertical-align: middle;*/
+  text-align: center;
+  /*vertical-align: middle;*/
+  line-height: 143px;
   
   border: 1px solid #e5e5e5;
   
@@ -718,9 +727,12 @@ nav {
   /*background-color: red;*/
 }
 .fabricator-item>a>img {
-  display: block;
+  /*display: block;
   margin: auto;
-  padding-top: auto;
+  padding-top: auto;*/
+  vertical-align: middle;
+  max-width: 100%;
+  
 }
 
 .fabricator-item>a:hover {
@@ -800,6 +812,9 @@ nav {
   font-weight: bold;
   text-decoration: none;
   color: #ffffff;  
+  
+  border-top: #405069 solid 1px;
+  border-bottom: #293449 solid 1px;
 }
 
 .services-slider-menu li>a:hover {
@@ -879,6 +894,7 @@ nav {
   list-style: none;
 }
 .about-company>ul>li {
+  position: relative;
   padding-left: 35px;
   
   
@@ -890,7 +906,7 @@ nav {
     border-bottom: 2px #fb565a solid;
     position: absolute;
     left: 0;
-    top: 8px;
+    top: 14px;
 } 
 /*---------------------------*/
 .about-contacts{
@@ -1010,7 +1026,7 @@ footer{
 
 .footer-top-two-address{
   display: inline-block;
- 
+  text-align: left;
   vertical-align: top
   
 }
@@ -1152,22 +1168,65 @@ footer{
 }
 /*===========catalog.html=======================*/
 /*стили внутренней страницы*/
+.breadcrumbs {
+  height: 60px;
+
+}
+.breadcrumbs>ul {
+  margin: 0;
+  padding: 0;
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  text-transform: uppercase;
+  
+}
 .breadcrumbs>ul>li{
+  position: relative;
   display:inline-block;
+  margin: 21px 0;
+  margin-left: -0.25em;
+  margin-right: 40px;
   vertical-align:top;
   list-style:none; 
 }
-.breadcrumbs>ul>li::after {
+.breadcrumbs>ul>li>a {
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  line-height: 18px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000000;
+}
+/*.breadcrumbs>ul>li::after {
   content:" > "
-}  
+} */ 
+.breadcrumbs>ul li+li::before {
+    content: "";
+    height: 8px;
+    width: 8px;
+    margin: -6px 0 0;
+    border-bottom: 1px solid #c1c6ce;
+    border-right: 1px solid #c1c6ce;
+    position: absolute;
+    left: -28px;
+    top: 11px;
+    transform: rotate(-45deg);
+}
+
 .head-catalog {
   display: block;
   height: 30px;
   margin: 0;
   padding: 30px;
+  font-weight: normal;
   font-size: 30px;
   line-height: 30px;
+  text-transform: uppercase;  
   background-color:#f2f6f8;
+}
+.goods-catalog {
+  margin-bottom: 60px;
 }
 
 .goods-filter {
@@ -1180,76 +1239,142 @@ footer{
   width: 700px;
   margin: 0;
   padding: 0;
-
 }
 .goods-page-sort {
   width: 100%;
-  height: 18px;
+  height: 38px;
   margin: 22px 0;
-  padding: 11px 0;
   font-family: "PT Sans", "Tahoma", sans-serif;
   font-size: 13px;
-  line-height: 18px;
-  vertical-align: middle;
+  line-height: 19px;  
   background-color: #f7f3ec;
 }
 .goods-page-sort>h2 {
   display: inline-block;
   margin: 0;
-  padding: 0;
-  padding-left: 20px;
-  vertical-align: top;
+  padding-left: 20px;  
 }
 
 .goods-page-sort>a {
   display: inline-block;
-  vertical-align: top;
+  padding: 8px 0; 
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;    
 }
 
-.page-item {
+.gps-select-menu{
+  display:inline-block;
 
-  width: 700px;
   margin: 0;
   padding: 0;
+  margin-left: 120px;  
+}
+
+.gps-select-menu>li{
+  display:inline-block;
+  width: 125px;
+  list-style:none; 
+  border-bottom:1px dotted #e3643;
+}
+
+.gps-select-menu>li>a{
+  display:inline-block;
+  margin: 10px 0;  
+ 
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #c7c7c7;
+  border-bottom: 1px dotted #ee3643;  
+  
+}
+
+.gps-select-menu>li>a:hover{
+  border-bottom: 1px solid #ee3643;  
+  color: #444444;
+}
+
+.gps-select-menu>li>a:active{
+  color: #ee3643;
+  border:none;
+}
+  
+.gps-select-menu>li:not(:first-child)>a{
+  margin-left: -0.25em; 
+} 
+.icon-up-dir,
+.icon-down-dir  {
+  font-size: 22px;
+  opacity: 0.3;
+}
+
+.icon-up-dir:hover,
+.icon-down-dir:hover  {
+  opacity: 1;
 }
 
 /*----------------------*/
-.item {
-  /*float: left;*/
-  display: inline-block;
-  margin-left: -0.25em;
+.p-item {
+  float: left;
+
   margin-right: 20px;
   margin-bottom: 20px;
   
 }
 
-.item:nth-child(3n-3) {
+.p-item:nth-child(3n-3) {
   margin-right: 0;
 }
 
-.item:nth-of-type(3n+1){
+.p-item:nth-of-type(3n+1){
   margin-left: 0;
 }
 /*---------------------*/
 
-.gps-select-menu{
-  display:inline-block;
-  vertical-align:top;
-}
-.gps-select-menu>li{
-  display:inline-block;
-  vertical-align:top;
-  list-style:none; 
-}
+
+
 .goods-paginator {
   width: 100%;
+  font-family: "PT Sans", "Tahoma", sans-serif;
+
 
 }
-
+.goods-paginator>ul {
+  margin: 0;
+  padding: 0;
+}
 .goods-paginator>ul>li {
   display:inline-block;
-  vertical-align:top;
+  width: 36px;
+  height: 36px;
+  border-radius: 2px;
+  margin-right: 10px;
+  text-align:center;
+  vertical-align:middle;
   list-style:none; 
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
+}
+
+.goods-paginator>ul>li:last-child {
+  width: 136px;
+}
+
+.goods-paginator>ul>li>a{
+  display: block;
+  font-size: 13px;
+  line-height: 36px;
+  text-decoration: none;
+  color: #000000;
+}
+
+.goods-paginator>ul>li>a:hover{
+  border: 1px solid #bdc6ca;
+  border-radius: 2px;
+}
+
+.goods-paginator>ul>li>a:active{
+  border: 1px solid #ee3643;
+  border-radius: 2px;
 }
 
 .about-goods {
