--- a/css/item.css
+++ b/css/item.css
@@ -1,161 +1,249 @@
-/*карточка товара*/
-.item-actions {
-  display: none;
-  width: 218px;
-  height: 88px;
-  padding: 40px 0;
-  background: rgba(255,255,255, .8);
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;    
-}
- .item-actions-buy,
- .item-actions-bookmark {
-  position: relative;
-  display: block;
-  width: 135px;
-  margin: 0 auto 7px;
-  padding: 7px 0;
-    
-  font-family: "Cuprum", "Tahoma", sans-serif;
-  font-size: 14px;
-  line-height: auto;
-  text-decoration: none;
+/* Фильтры */
+.filter {
+  float: left;
+  width: 220px;
+  margin: 0;
+  margin-right: 20px;
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  line-height: 18px;  
   text-transform: uppercase;
+  color: #000000;
   
-  color: #ffffff;
-  border: 3px solid #63a63e;
-  border-bottom-color: #367315;
-  border-radius: 3px;
+}
+
+.filter-title {  
+  margin: 22px 0;
+  padding: 11px 19px;
+
+  background-color: #f7f3ec;
+  color: #000000;
+  border-radius: 3px;  
+}
+
+.range-filter {
+  margin: 0;
+  margin-bottom: 25px;
+  border: none;
+  border-bottom: #e5e5e5 1px solid;
+}
+.range-controls {
+  position: relative;
+  overflow: hidden;
+  height: 80px;
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0 20px;
+  
+  background-color: #f7f3ec;
+  border-radius: 5px;
+  
+}
+.range-controls .scale {
+  height: 2px;
+  margin: 0;
+  margin-top: 39px;
+  background-color: #d7dcde;
+}
+.range-controls .bar { /*индикатор зеленый*/
+  width: 135px;
+  height: 2px;
+  background-color: #00ca74;
+}
+.range-controls .toggle {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  
+  width: 4px;
+  height: 4px;
+  background-color: #ababab;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
   
   cursor: pointer;
 }
-.item-actions-bookmark {
-  
-  background-color: #fffffff;
-  color: #32425c;
-  border-bottom-color: #63a63e;
-}
-.item-actions-buy { 
-  background-color: #63a63e; 
-}
+.range-controls .min-toggle { 
+  left: 20px; }
+.range-controls .max-toggle { 
+  left: 139px; }
 
-.item-actions-bookmark:hover { 
-  border: 3px solid #32425c; 
- }
-.item-actions-bookmark:active {
-  border: 3px solid #32425c;
-  opacity: 0.3;
-}
-.item-actions-buy:hover {
-  background-color: #5fbb2d;
-  border: 3px solid #5fbb2d;
-  border-bottom-color: #367315;   
-  
-}
-
-.item-actions-buy:hover i {
-  opacity: 1;
-  
-}
-
-.item-actions-buy:active {
-  background-color: #518534;
-  border: 3px solid #518534;
-
-}
-/*---------------------------*/
-.item {  
+.price-controls {
   position: relative;
-  display: inline-block;
-  
-  width: 218px;
-  height: 316px;
-  
   margin: 0;
-  padding: 0;  
+  margin-bottom: 25px;
   
-  font-family: "PT Sans", "Tahoma", sans-serif;
-  text-align: center;
   font-size: 0;
-  vertical-align: top;
-
-  border: 1px solid #e5e5e5;
-}
-.item:hover { 
-  box-shadow: 0 7px 25px 0 rgba(41, 52, 73, 0.5); 
 }
 
-.item:hover .item-actions{
-  display: block;
+.price-controls::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  height: 2px;
+  width: 16px;
+  margin: -1px 0 0 -8px;
+  background-color: #000000;
+  content: "";
 }
-
-.item-picture {
-  line-height: 170px;
-}
-
-.item-picture>img {
-  max-width: 100%;
-  vertical-align: middle;
-    
-}
-.item-text {  
-  width: 100%;
+.price-controls input {
+  display: inline-block;
+  width: 64px;
+  padding: 8px 10px;
+  
+  font-size: 13px;
   text-align: center;
-  font-size: 17px;
+  
+  background: #f7f3ec;
+  border: none;
+  border-radius: 5px;
+  
+  color: #000000;  
+}
+
+.min-price {
+  margin: 0 30px 0 0;
+}
+
+.filter-dc {
+  margin: 0;
+  margin-bottom: 25px;
+  border: none;
+}
+.input-click-checkbox,
+.checkbox, 
+.radio { 
+  display: none;
+}
+.label-click-checkbox {
+  position: relative;
+  display: block;
+  margin: 0 0 15px 0;
+  padding: 0 20px 0 0;
+  font-weight:bold;
+  
+  cursor: pointer;
+}
+
+.input-click-checkbox:checked+.label-click-checkbox::after {
+  margin: 0;
+  margin-top: -10px;
+  transform: rotate(225deg);
+}
+
+.label-click-checkbox:active::after {
+  border-top: 3px solid #f3f4f5;
+  border-left: 3px solid #f3f4f5;
+}
+
+.checkbox-visible { 
+  display: block; 
+}
+
+.input-click-checkbox:checked~.checkbox-visible { 
+  display: none; 
+}
+
+.checkbox+label,
+.radio+label {
+  position: relative;
+  display: block;
+  margin: 0 0 20px;
+  padding: 0 0 0 35px;
+  font-size: 15px;
+  line-height: 20px;
+  cursor: pointer;
+}
+.checkbox+label::before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 17px;
+  width: 17px;
+  margin: -11px 0 0;
+  background-color: transparent;
+  border: 3px solid #c1c1c1;
+  border-radius: 4px;
+  content: "";
+}
+.checkbox+label:hover::before { 
+  border-color: #b5b5b5;
+}
+.checkbox:disabled+label::before { 
+  border: 3px solid #e9e9e9;
+}
+
+.checkbox+label::after { 
+  display: none;
+}
+
+.checkbox:checked+label::after {
+  position: absolute;
+  left: 10px;
+  top: -4px;  
+  display: block;
+  width: 6px;
+  height: 16px;
+  background-color: transparent;
+  border-bottom: 5px solid #c1c1c1;
+  border-right: 5px solid #c1c1c1;
+  border-radius: 1px;
+  box-shadow: 2px 0 0 0 #fff, inset -2px 0 0 0 #fff;
+  transform: rotate(45deg);
+  content: "";
+}
+
+.checkbox:checked+label:hover::after {
+  border-bottom: 5px solid #b5b5b5;
+  border-right: 5px solid #b5b5b5;
+}
+.checkbox:disabled:checked+label::after {
+  border-bottom: 5px solid #e9e9e9;
+  border-right: 5px solid #e9e9e9;
+}
+.radio+label::after {
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  width: 9px;
+  height: 9px;  
+  margin: -9px 0 0;  
+  background-color: #ffffff;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px #c1c1c1;
+  content: "";
+}
+
+.radio+label:hover::after { 
+  box-shadow: 0 0 0 4px #b5b5b5;
+}
+
+.radio:checked+label::after { 
+  background-color: #c1c1c1;
+}
+.radio:checked+label:hover::after { 
+  background-color: #b5b5b5;
+}
+
+.radio:disabled+label::after { 
+  box-shadow: 0 0 0 4px #e9e9e9;
+}
+
+.radio:disabled:checked+label::after {
+  background-color: #e9e9e9;
+  box-shadow: 0 0 0 4px #e9e9e9;
   
 }
-.item p {
-  margin: 0;
-  padding: 0;
-}
 
-.item-about{
-  padding: 0 25px;
-  margin: 0 0 2px;
-
-  font-size: 18px;
-  line-height: 20px;
+input[type="submit"]{
+  width: 138px;
+  height: 36px;
   font-weight: bold;
+  background-color: #ffffff;
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
 }
-
-.item-cost {
-  min-height: 38px; 
-    
-  font-size: 17px;
-  line-height: 38px;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-
-.item-cost-new {
-    position: relative;
-    z-index: 0;
-    
-    display: inline-block;
-    width: 140px;
-    padding: 0 34px;
-    
-    background: #ee3643;
-    color: #ffffff;  
-    border-bottom-left-radius: 3px;
-    border-top-left-radius: 3px;
-}
-
-.item-cost-new::after {
-    position: absolute;
-    right: -4px;
-    z-index: 5;
-    
-    content: "";
-    
-    border-style: solid;
-    border-width: 19px 0 19px 19px;
-    border-color: #ffffff #ffffff #ffffff #ee3643; 
-}
-
-.item-cost-old {
-  text-decoration: line-through;
-  color: #999999;
-}
+/* Конец фильтров */
