--- a/css/style.css
+++ b/css/style.css
@@ -137,6 +137,18 @@
   display: table;
   clear: both;  
 }
+
+.new::after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1000;
+  
+  width: 60px;
+  height: 59px;
+  background: url(../img/new-flag.png);
+  content: ""; 
+}
 /*===========================================*/
 
 body{
@@ -456,7 +468,242 @@ nav {
 }  
 
 /*==========slider==============*/
-/*Пока отдельно*/
+*общие классы слайдера*/
+.catalog-services {
+padding: 55px 0;    
+}
+.service-name {
+position: relative;
+float: right;
+width: 275px;
+height: 76px;
+margin: 0 0 20px 20px;
+padding: 25px 0 22px 25px;    
+}
+.service-title {
+margin: 0;
+padding: 0;
+font-size: 24px;
+line-height: 30px;
+font-weight: bold;
+color: #ffffff;
+
+}
+.service-description {
+display: inline-block;
+width: 135px;
+margin: 15px 0 0;
+padding: 10px 0;
+
+font-size: 14px;
+line-height: 18px;
+font-weight: bold;
+text-transform: uppercase;
+text-align: center;
+
+background: rgba(178, 178, 178, 0.3);
+color: #ffffff;
+border-radius: 3px;  
+}
+.service-description:hover {
+background: rgba(178, 178, 178, 0.5);
+} 
+.service-description:active {
+background: rgba(178, 178, 178, 0.7);
+} 
+
+/*Отдельные блоки. Строим сетку*/ 
+.service-name.materials {
+margin-left: 0;
+background-color: #f6b22d;
+background-image: url("../img/index-pail.png");
+background-repeat: no-repeat;
+background-position: 80% center;
+
+}
+
+.service-name.tool {
+background-color: #4aafde; 
+background-image: url("../img/index-drill.png");
+background-repeat: no-repeat;
+background-position: 80% center;
+}
+
+.service-name.technics { 
+background-color: #cc79d1;
+background-image: url("../img/index-tractor.png");
+background-repeat: no-repeat;
+background-position: 80% center;  
+}
+
+.slider {
+position: relative;
+float: left;
+overflow: hidden;
+width: 620px;
+height: 266px; 
+}
+
+.service-name.sale {
+background-color: #85d179; 
+background-image: url("../img/index-basket.png");
+background-repeat: no-repeat;
+background-position: 80% center;
+}
+
+.service-name.delivery {
+background-color: #f6b22d;
+background-image: url("../img/index-auto.png");
+background-repeat: no-repeat;
+background-position: 80% center;   
+}
+/*==Слайдер большой================*/
+.slider-controls-buttons {
+position: absolute;
+bottom: 36px;
+left: 50%;
+z-index: 1000;
+width: 160px;
+height: 10px;
+margin: 0 0 0 -80px;
+font-size: 0;
+text-align: center;
+}
+
+.slider-controls-buttons label {
+display: inline-block;
+width: 6px;
+height: 6px;
+margin: 0 5px;
+vertical-align: top;
+background-color: #ffffff;
+border: 2px solid #ffffff;
+border-radius: 50%;
+
+cursor: pointer;
+}                
+/*стрелки рисуем*/
+.slider-controls-arrows {
+position: relative;
+height: 100%;
+}            
+.slider-prev::after, 
+.slider-next::after {
+position: absolute;
+right: 27px;
+top: 50%;
+z-index: 1000;
+display: block;
+
+width: 25px;
+height: 25px;
+
+margin: -15px 0 0;
+border-right: 5px solid #fff;
+border-bottom: 5px solid #fff;
+border-radius: 5px;
+transform: rotate(-45deg);
+cursor: pointer;
+content: "";
+}
+
+.slider-prev::after {
+transform: rotate(135deg);
+left: 27px;
+}
+
+/*=====================================*/ 
+.slides {
+position: absolute;
+top: 0;
+left: 0;
+width: 200%;
+height: 100%;
+}
+
+.slide {
+position: relative; 
+float: left;
+width: 620px;
+height: 100%;
+}
+.slide-text {
+width: 260px;
+padding: 15px 24px;
+color: #ffffff;
+}
+
+.slide-title {
+margin: 0;
+padding: 0;
+font-size: 36px;
+line-height: 30px;
+font-weight: bold;
+text-transform: uppercase;
+}
+
+
+.slide-text p {
+font-family: "PT Sans", "Tahoma", sans-serif;
+font-size: 18px;
+line-height: 24px;  
+}
+
+.drill {
+background: url("../img/sl_drill.jpg") no-repeat;
+}
+
+.perforator {
+background: url("../img/sl_perforator.jpg") no-repeat;
+}
+
+/*=====кнопка===========*/
+.open-catalog {
+position: absolute;
+bottom: 22px;
+left: 25px;
+float: right;
+width: 195px;
+padding: 12px 0;
+
+font-size: 14px;
+text-decoration: none;
+text-transform: uppercase;
+text-align: center;
+
+background-color: #ee3643;
+color: #ffffff;
+border-radius: 3px; 
+
+cursor: pointer;
+}
+
+.open-catalog:hover {
+background-color: #ca2c37;
+}
+.open-catalog:active {
+background-color: #ba2732;
+}
+
+/*Не понятно что делает, но работает*/            
+.slider #drill:checked~.slider-controls-buttons label[for="drill"], 
+.slider #perforator:checked~.slider-controls-buttons label[for="perforator"] { 
+background: #ee3643; 
+}
+
+.slider #perforator:checked~.slides { 
+left: -620px; 
+}
+
+.slider #drill:checked~.slides { 
+left: 0;
+}
+/*скрываем не нужную стрелку слево или справа*/            
+.slider #drill:checked~.slider-controls-arrows label[for="drill"]::after,
+.slider #perforator:checked~.slider-controls-arrows label[for="perforator"]::after { 
+opacity: 0;
+cursor: default;
+}
 /*============item карта товара=================*/
 /*карточка товара*/
 .item-actions {
@@ -852,14 +1099,27 @@ nav {
   font-size: 14px;
   line-height: 18px;
 }
-.services-slider-content {
-  
+.services-slider-content {  
  /* width: 468px;
   height: 261px;*/
-  background-image: url("../img/index-delivery.png");
+  
   background-repeat: no-repeat;
   background-position:  bottom right;
 }
+.delivery {
+  
+  background-image: url("../img/index-delivery.png");
+}
+.garanty{
+  display:none;
+  background-image: url("../img/index-garanty.png");
+}
+.credit {
+  display:none;
+  background-image: url("../img/index-credit.png");
+}
+
+
 /*-----------------------*/
 .about {
   height: 538px;  
@@ -1093,11 +1353,7 @@ footer{
   display: inline-block;
   width: 40px;
   height: 40px;
-  margin-left: 5px;
-  
- 
-  
-  
+  margin-left: 5px;  
 }
 .fb-social>div>a {
   display: inline-block;
@@ -1229,11 +1485,6 @@ footer{
   margin-bottom: 60px;
 }
 
-.goods-filter {
-  float:left;
-  width:220px;
-}
-
 .goods-page {
   float: right;
   width: 700px;
@@ -1247,9 +1498,10 @@ footer{
   font-family: "PT Sans", "Tahoma", sans-serif;
   font-size: 13px;
   line-height: 19px;  
+  text-transform: uppercase;
   background-color: #f7f3ec;
 }
-.goods-page-sort>h2 {
+.goods-page-sort>h2{
   display: inline-block;
   margin: 0;
   padding-left: 20px;  
@@ -1378,10 +1630,10 @@ footer{
 }
 
 .about-goods {
-  background-color: #f2f6f8;
   padding-top: 65px;
   padding-bottom: 65px;
   line-height: 24px;
+  background-color: #f2f6f8;  
 }
 
 .about-goods h2 {
@@ -1394,3 +1646,252 @@ footer{
   padding: 0;
   font-size: 14px;
 }
+/* Фильтры */
+.filter {
+  float: left;
+  width: 220px;
+  margin: 0;
+  margin-right: 20px;
+  font-family: "PT Sans", "Tahoma", sans-serif;
+  font-size: 13px;
+  line-height: 18px;  
+  text-transform: uppercase;
+  color: #000000;
+  
+}
+
+.filter-title {  
+  margin: 22px 0;
+  padding: 11px 19px;
+
+  background-color: #f7f3ec;
+  color: #000000;
+  border-radius: 3px;  
+}
+
+.range-filter {
+  margin: 0;
+  margin-bottom: 25px;
+  border: none;
+  border-bottom: #e5e5e5 1px solid;
+}
+.range-controls {
+  position: relative;
+  overflow: hidden;
+  height: 80px;
+  margin: 0;
+  margin-bottom: 15px;
+  padding: 0 20px;
+  
+  background-color: #f7f3ec;
+  border-radius: 5px;
+  
+}
+.range-controls .scale {
+  height: 2px;
+  margin: 0;
+  margin-top: 39px;
+  background-color: #d7dcde;
+}
+.range-controls .bar { /*индикатор зеленый*/
+  width: 135px;
+  height: 2px;
+  background-color: #00ca74;
+}
+.range-controls .toggle {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  
+  width: 4px;
+  height: 4px;
+  background-color: #ababab;
+  border: 8px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  
+  cursor: pointer;
+}
+.range-controls .min-toggle { 
+  left: 20px; }
+.range-controls .max-toggle { 
+  left: 139px; }
+
+.price-controls {
+  position: relative;
+  margin: 0;
+  margin-bottom: 25px;
+  
+  font-size: 0;
+}
+
+.price-controls::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  
+  height: 2px;
+  width: 16px;
+  margin: -1px 0 0 -8px;
+  background-color: #000000;
+  content: "";
+}
+.price-controls input {
+  display: inline-block;
+  width: 64px;
+  padding: 8px 10px;
+  
+  font-size: 13px;
+  text-align: center;
+  
+  background: #f7f3ec;
+  border: none;
+  border-radius: 5px;
+  
+  color: #000000;  
+}
+
+.min-price {
+  margin: 0 30px 0 0;
+}
+
+.filter-dc {
+  margin: 0;
+  margin-bottom: 25px;
+  border: none;
+}
+.input-click-checkbox,
+.checkbox, 
+.radio { 
+  display: none;
+}
+.label-click-checkbox {
+  position: relative;
+  display: block;
+  margin: 0 0 15px 0;
+  padding: 0 20px 0 0;
+  font-weight:bold;
+  
+  cursor: pointer;
+}
+
+.input-click-checkbox:checked+.label-click-checkbox::after {
+  margin: 0;
+  margin-top: -10px;
+  transform: rotate(225deg);
+}
+
+.label-click-checkbox:active::after {
+  border-top: 3px solid #f3f4f5;
+  border-left: 3px solid #f3f4f5;
+}
+
+.checkbox-visible { 
+  display: block; 
+}
+
+.input-click-checkbox:checked~.checkbox-visible { 
+  display: none; 
+}
+
+.checkbox+label,
+.radio+label {
+  position: relative;
+  display: block;
+  margin: 0 0 20px;
+  padding: 0 0 0 35px;
+  font-size: 15px;
+  line-height: 20px;
+  cursor: pointer;
+}
+.checkbox+label::before {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 17px;
+  width: 17px;
+  margin: -11px 0 0;
+  background-color: transparent;
+  border: 3px solid #c1c1c1;
+  border-radius: 4px;
+  content: "";
+}
+.checkbox+label:hover::before { 
+  border-color: #b5b5b5;
+}
+.checkbox:disabled+label::before { 
+  border: 3px solid #e9e9e9;
+}
+
+.checkbox+label::after { 
+  display: none;
+}
+
+.checkbox:checked+label::after {
+  position: absolute;
+  left: 10px;
+  top: -4px;  
+  display: block;
+  width: 6px;
+  height: 16px;
+  background-color: transparent;
+  border-bottom: 5px solid #c1c1c1;
+  border-right: 5px solid #c1c1c1;
+  border-radius: 1px;
+  box-shadow: 2px 0 0 0 #fff, inset -2px 0 0 0 #fff;
+  transform: rotate(45deg);
+  content: "";
+}
+
+.checkbox:checked+label:hover::after {
+  border-bottom: 5px solid #b5b5b5;
+  border-right: 5px solid #b5b5b5;
+}
+.checkbox:disabled:checked+label::after {
+  border-bottom: 5px solid #e9e9e9;
+  border-right: 5px solid #e9e9e9;
+}
+.radio+label::after {
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  width: 9px;
+  height: 9px;  
+  margin: -9px 0 0;  
+  background-color: #ffffff;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 0 4px #c1c1c1;
+  content: "";
+}
+
+.radio+label:hover::after { 
+  box-shadow: 0 0 0 4px #b5b5b5;
+}
+
+.radio:checked+label::after { 
+  background-color: #c1c1c1;
+}
+.radio:checked+label:hover::after { 
+  background-color: #b5b5b5;
+}
+
+.radio:disabled+label::after { 
+  box-shadow: 0 0 0 4px #e9e9e9;
+}
+
+.radio:disabled:checked+label::after {
+  background-color: #e9e9e9;
+  box-shadow: 0 0 0 4px #e9e9e9;
+  
+}
+
+input[type="submit"]{
+  width: 138px;
+  height: 36px;
+  font-weight: bold;
+  background-color: #ffffff;
+  border: 1px solid #e5e5e5;
+  border-radius: 2px;
+}
+/* Конец фильтров */
